# tomopy

./: .appveyor.yml  .bash_history  .binstar.yml  .buildinfo  .clang-format  .cmake-format.yml  .codeclimate.yml  .coverage.sh  .coveragerc  .dockerignore  .gitignore  .gitmodules  .pep8speaks.yml  .project  .pydevproject  .readthedocs.yml  .run-clang-format.sh  .spyderproject  .travis.yml  CHANGES.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  Config.cmake.in  Dockerfile  GOVERNANCE.md  INSTALL  INSTALL.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  VERSION  appveyor.yml  azure-pipelines.yml  bld.bat  build.py  build.sh  build_libtomopy.sh  cite.html  conda_build_config.yml  (+38 more)
source/: CMakeLists.txt
source/c/: art.c  bart.c  fbp.c  grad.c  gridrec.c  mlem.c  osem.c  ospml_hybrid.c  ospml_quad.c  pml_hybrid.c  pml_quad.c  project.c  sirt.c  stripe.c  tikh.c  tv.c  utils.c
source/c/misc/: morph.c
source/c/recon/: gridrec.c  gridrec.cc  mlem.c  sirt.cc
source/c/sim/: project.c
source/cxx/: art.cc  bart.cc  gridrec.cc  mlem.cc  project.cc  sirt.cc  utils.cc  utils_openacc.cc  utils_openmp.cc
source/gpu/: art.cu  common.cu  gpu.cu  mlem.cu  sirt.cu  sum.cu  utils.cu  utils_cuda.cu
source/include/: art.h  bart.h  common.h  common.hh  constants.hh  cxx_extern.h  data.hh  gpu.h  gpu.hh  gridrec.h  macros.h  macros.hh  mlem.h  project.h  remove_ring.h  sirt.h  stripe.h  tomocxx.hpp  typedefs.hh  utils.h  utils.hh  utils_cuda.hh  utils_openmp.h
source/include/accel/: common.hh  common_CPU.hh  common_GPU.hh  cxx_extern.h  data.hh  data_CPU.hh  data_GPU.hh  macros.hh  utils.hh  utils_CPU.hh  utils_GPU.hh
source/include/gridrec/: filters.h  gridrec.h  gridrec.hh  macros.hh  utils.hh
source/include/misc/: morph.h
source/include/prep/: prep.h
source/include/recon/: project.h  recon.h  utils.h
source/libtomo/: CMakeLists.txt
source/libtomo/accel/: CMakeLists.txt  common.hh  cuda.h  data.hh  macros.hh  typedefs.hh  utils.hh
source/libtomo/accelerated/: CMakeLists.txt
source/libtomo/gridrec/: CMakeLists.txt  filters.c  gridrec.c  gridrec.cc  memory.h  pal.h  tables.h
source/libtomo/misc/: CMakeLists.txt  inpainter.c  median_filt3d.c  morph.c  remove_ring.c  utils.c  utils.h
source/libtomo/prep/: CMakeLists.txt  prep.c  stripe.c  stripes_detect3d.c
source/libtomo/pybind11/: CMakeLists.txt  normalize.cxx
source/libtomo/recon/: CMakeLists.txt  art.c  bart.c  fbp.c  grad.c  mlem.c  osem.c  ospml_hybrid.c  ospml_quad.c  pml_hybrid.c  pml_quad.c  project.c  sirt.c  tikh.c  tv.c  utils.c  utils.h  vector.c
source/tomopy/: .gitignore  __init__.py  _fft_loader.py
source/tomopy/data/: __init__.py  lena.tif  peppers.tif  tomodata.py
source/tomopy/misc/: __init__.py  benchmark.py  corr.py  morph.py  npmath.py  phantom.py
source/tomopy/prep/: alignment.py  normalize.py  phase.py  stripe.py
source/tomopy/recon/: acceleration.py  algorithm.py  rotation.py  vector.py  wrappers.py
source/tomopy/sim/: distortion.py  project.py  propagate.py
source/tomopy/util/: __init__.py  dtype.py  extern.py  misc.py  mproc.py
src/: CMakeLists.txt  Makefile.darwin  Makefile.linux  Makefile.windows  Mk.base  README  art.c  bart.c  build_libtomopy.py  configure.py  corr.c  corr.h  fbp.c  fft.c  fftw3.h  grad.c  gridrec.c  gridrec.h  mlem.c  morph.c  morph.h  osem.c  ospml_hybrid.c  ospml_quad.c  pml_hybrid.c  pml_quad.c  prep.c  prep.h  project.c  recon.h  remove_ring.c  remove_ring.h  remove_rings.c  remove_rings.h  simulate.c  sirt.c  stripe.c  stripe.h  tv.c  utils.c  (+2 more)
src/cxx/: art.cc  bart.cc  gridrec.cc  gridrec.hh  libtomopy.cpp  libtomopy.hpp  mlem.cc  profiler.hh  project.cc  sirt.cc  tomocxx.cpp  tomocxx.hpp  utils.cc  utils.hh  utils_openacc.cc  utils_openmp.cc
src/gpu/: art.cu  gpu.cc  gpu.cu  gpu.h  gpu.hh  mlem.cu  sirt.cu  sum.cu  utils_cuda.cu  utils_cuda.h
src/libtomopy/c/: mlem.c  ospml_hybrid.c  ospml_quad.c  pml_hybrid.c  sirt.c  stripe.c
src/tomopy/: __init__.py  _fft_loader.py
src/tomopy/data/: barbara.tif
src/tomopy/misc/: benchmark.py
src/tomopy/prep/: alignment.py  stripe.py
src/tomopy/recon/: __init__.py  rotation.py
test/: CMakeLists.txt  README.md  test_nppi.cu  test_opencv.cc  test_prep.py  test_recon.py  test_sim.py  util.py
test/data/: angle.npy  apply_pad_0.npy  apply_pad_1.npy  apply_pad_2.npy  art.npy  bart.npy  circ_mask_0.npy  circ_mask_1.npy  circ_mask_2.npy  cube.npy  dark.npy  downsample_0.npy  downsample_1.npy  downsample_2.npy  fbp.npy  flat.npy  gaussian_filter_0.npy  gaussian_filter_1.npy  gaussian_filter_2.npy  gridrec.npy  median_filter_0.npy  median_filter_1.npy  median_filter_2.npy  mlem.npy  normalize.npy  normalize_bg.npy  obj.npy  ones-float64.fits  ones.fits  osem.npy  ospml_hybrid.npy  ospml_quad.npy  pad_0.npy  pad_1.npy  pad_2.npy  pml_hybrid.npy  pml_quad.npy  proj.npy  read_stack.h5  remove_stripe_fw.npy  (+12 more)
test/test_data/: angle.npy  art.npy  circ_mask_0.npy  gaussian_filter_2.npy  grad.npy  gridrec_cosine.npy  gridrec_hamming.npy  gridrec_hann.npy  gridrec_ramlak.npy  gridrec_shepp.npy  lena.h5  median_filter_1.npy  median_filter_2.npy  obj.npy  osem.npy  ospml_hybrid.npy  ospml_quad.npy  pml_hybrid.npy  pml_quad.npy  proj.npy  reader_00001.tiff  retrieve_phase.npy  sinogram.npy  test_chip01.xrm  tomo.npy  txrm_test_chip_tomo.txrm  upsample_0.npy  upsample_2.npy
test/test_io/: __init__.py  test_data.py  test_exchange.py  test_phantom.py  test_reader.py  test_writer.py
test/test_misc/: __init__.py  test_corr.py  test_mask.py  test_morph.py  test_mproc.py  test_phantom.py
test/test_prep/: test_normalize.py  test_phase.py  test_stripe.py
test/test_recon/: test_algorithm.py  test_rotation.py
test/test_sim/: test_project.py  test_propagate.py
test/test_tomopy/: __init__.py  __main__.py  util.py
test/test_tomopy/test_data/: bart.npy  dark.npy  discoef.txt  distortion_3d.npy  distortion_proj.npy  distortion_sino.npy  downsample_2.npy  flat_1.npy  gaussian_filter_0.npy  gridrec_butterworth.npy  gridrec_none.npy  gridrec_parzen.npy  lena.npy  median_filter3d.npy  osem.npy  (+19 more)
test/test_util/: test_mproc.py
(+831 files in other folders)
