[metadata]
author =
    Doga Gursoy
    Daniel Ching
    Jonathan Madsen
    Tomopy Contributors
author_email = dgursoy@anl.gov
classifiers =
    'Development Status :: 4 - Beta'
    'License :: OSI Approved :: BSD License'
    'Intended Audience :: Science/Research'
    'Intended Audience :: Education'
    'Intended Audience :: Developers'
    'Natural Language :: English'
    'Operating System :: OS Independent'
    'Programming Language :: Python :: 2'
    'Programming Language :: Python :: 2.7'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.5'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: C'
description='Tomographic Reconstruction in Python.'
download_url = http://github.com/tomopy/tomopy.git
keywords=
    'tomography'
    'reconstruction'
    'imaging'
license = BSD 3-Clause License
long_description=file: README.rst, LICENSE.txt
long_description_content_type='text/x-rst'
name = tomopy
platforms = Any
url = http://tomopy.readthedocs.org

[nosetests]
verbosity=2
where=test
cover-package=tomopy
with-coverage=1
