[metadata]
name = tomopy
description = 'Tomographic Reconstruction in Python.'
long_description_content_type='text/x-rst'
keywords =
    'tomography'
    'reconstruction'
    'imaging'
long_description=file: README.rst, LICENSE.txt
url = http://tomopy.readthedocs.org
download_url = http://github.com/tomopy/tomopy.git
author =
    Doga Gursoy
    Daniel Ching
    TomoPy Contributors
author_email = dgursoy@anl.gov
license = BSD 3-Clause License
classifiers =
    'License :: OSI Approved :: BSD License'
    'Intended Audience :: Science/Research'
    'Intended Audience :: Education'
    'Intended Audience :: Developers'
    'Natural Language :: English'
    'Operating System :: OS Independent'
    'Programming Language :: Python :: 3'

[nosetests]
verbosity=2
where=test
cover-package=tomopy
with-coverage=1


[options]
python_requires = >=3.8
include_package_data = True
zip_safe = False
packages = find:
package_dir =
    =source
install_requires =
    importlib_metadata
    numexpr==2.*
    # numpy 1.22.4 breaks distribute_jobs
    # https://github.com/numpy/numpy/issues/21612
    numpy~=1.12,!=1.22.4
    pywavelets==1.*
    scikit-image~=0.17
    # scipy 1.14 removes deprecated interpolation API
    scipy>=1.8,<1.14
    tifffile>=2019

[options.packages.find]
where=source
include = tomopy*

[yapf]
based_on_style = google
split_before_logical_operator = true
SPLIT_COMPLEX_COMPREHENSION = true
COALESCE_BRACKETS = true
SPLIT_BEFORE_DOT = true

[pycodestyle]
max-line-length=80
count=true

[pydocstyle]
ignore = D100,D213,D416,D203,D107,D105
